--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; connect-src 'self' https://api.dscvr.one https://api1.stg.dscvr.one https://*.helius-rpc.com https://api.devnet.solana.com https://*.lottiefiles.com; img-src 'self' https://*.dial.to/ https://proxy.dial.to/ data:; script-src 'self' https://*.lottiefiles.com; style-src 'self' 'unsafe-inline';"
+          "value": "default-src 'self'; connect-src 'self' https://api.dscvr.one https://api1.stg.dscvr.one https://*.helius-rpc.com https://api.devnet.solana.com https://*.lottiefiles.com; img-src 'self' https://*.dial.to/ https://proxy.dial.to/ data:; script-src 'self' https://*.lottiefiles.com https://unpkg.com; style-src 'self' 'unsafe-inline';"
         }
       ]
     }
