--- a/vercel.json
+++ b/vercel.json
@@ -5,10 +5,9 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; connect-src 'self' https://api.dscvr.one https://api1.stg.dscvr.one https://*.helius-rpc.com https://api.devnet.solana.com https://*.lottiefiles.com; img-src 'self' https://*.dial.to/ https://proxy.dial.to/ data:; script-src 'self' https://*.lottiefiles.com https://unpkg.com https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs; style-src 'self' 'unsafe-inline';"
+          "value": "default-src 'self'; connect-src 'self' https://api.dscvr.one https://api1.stg.dscvr.one https://*.helius-rpc.com https://api.devnet.solana.com; img-src 'self' https://*.dial.to/ https://proxy.dial.to/ https://res.cloudinary.com; script-src 'self' https://unpkg.com https://*.lottiefiles.com; style-src 'self' 'unsafe-inline';"
         }
       ]
     }
   ]
 }
-
