--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "connect-src 'self' https://api.dscvr.one https://api1.stg.dscvr.one https://*.helius-rpc.com https://api.devnet.solana.com; https://lottie.host/62fbdc98-c33a-428f-bef1-2933c285b572/W18T6i5o8T.json; img-src 'self' https://*.dial.to/ https://proxy.dial.to/ https://res.cloudinary.com/*; script-src 'self' https://unpkg.com/@dotlottie/*/dist/dotlottie-player.mjs;"
+          "value": "connect-src 'self' https://api.dscvr.one https://api1.stg.dscvr.one https://*.helius-rpc.com https://api.devnet.solana.com; https://lottie.host/62fbdc98-c33a-428f-bef1-2933c285b572/W18T6i5o8T.json; img-src 'self' https://*.dial.to/ https://proxy.dial.to; https://res.cloudinary.com/dbo7hzofg/image/upload/w_1000,ar_1:1,c_fill,g_auto,e_art:hokusai/v1725465197/dscvrpoints_achievments_twtrxq.jpg; https://res.cloudinary.com/dbo7hzofg/image/upload/w_1000,ar_1:1,c_fill,g_auto,e_art:hokusai/v1725465181/follower_achievment_xcmpep.jpg; https://res.cloudinary.com/dbo7hzofg/image/upload/w_1000,ar_1:1,c_fill,g_auto,e_art:hokusai/v1725465190/days_achievment_sglknm.jpg; script-src 'self' https://unpkg.com/@dotlottie/*/dist/dotlottie-player.mjs;"
         }
       ]
     }
