--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@coral-xyz/anchor": "^0.30.1",
     "@dscvr-one/canvas-client-sdk": "^1.1.1",
     "@dscvr-one/canvas-wallet-adapter": "^1.0.2",
+    "@metaplex-foundation/mpl-core": "^1.1.1",
     "@solana/web3.js": "^1.95.3",
     "bn.js": "^5.2.1",
     "buffer": "^6.0.3",
